<?xml version="1.0"?>
<package>
  <name>dynamixel_controller</name>
  <version>0.0.0</version>
  <description>The dynamixel_controller package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>


  <license>BSD</license>
<url type="website">http://oroca.org</url>
<url type="repository">https://github.com/oroca/rosa_dynamixel.git</url>
 <!-- <url type="website">http://wiki.ros.org/rosa_dynamixel</url> -->
  
  <author email="tankboy12@naver.com">BAEK</author> -->

  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
